infrastructure/litellm/laya-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laya
  namespace: litellm
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: laya
    app.kubernetes.io/instance: laya
  ports:
    - name: http
      port: 8000
      targetPort: http
